--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -27,10 +27,10 @@ nav{
 	display: block;
 }
 
-@media only screen and (max 768px){
-	nav{
-		display: none;	
-	}
+@media (min-width: 240px) and (max-width: 768px) {
+	nav {  
+		display: none;
+  	}
 }
 
 ul.nav{
