--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -117,7 +117,7 @@ p{
 	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
 }
 
-@media (min-width:280px) and (max-width:768px){
+@media (min-width:240px) and (max-width:768px){
 	.titulo-principal {
 		text-align: center;
 		border-bottom: 2px solid #59A6C7;
@@ -147,36 +147,14 @@ p{
 		margin-left: 10px;
 		margin-right: 50px;
 		margin-bottom:0px;    
-    	padding-top: 10px;
-    	padding-bottom: 10px;
+    		padding-top: 10px;
+    		padding-bottom: 10px;
 	}
 }
 
-
-/*.parrafo{
-	font-size: 20px;
-	color: #EDEBEB;
-	color: #555555;
-	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
-}*/
-/* Atributos de las margenes laterales del contenido general de todas las etiquetas section - Nombre de la clase expuesto a cambio del mismo */
-/*.margen{
-	margin-top: 20px;
-	margin-left: 150px;
-	margin-right: 50px;
-	padding: 25px;
-	padding-bottom: 0px;
-}*/
-
 ul{
 	display: block;
-	/*padding-left: 0px;*/
-/*	list-style-type: circle;
-	-webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;*/
-    -webkit-padding-start: 0px;
+	-webkit-padding-start: 0px;
 }
 
 li{
@@ -187,18 +165,8 @@ li{
 }
 
 /* ==========================================================
-! 7. Profile intro
+! . Perfil
 ========================================================== */
-/*.profile-intro {
-  margin-top: 50px;
-  position: relative;
-  z-index: 99;
-}
-@media (min-width:992px) {
-  .profile-intro {
-    height: 245px;
-  }
-}*/
 .profile-pic {
   	text-align: center;
   	border-radius: 100%;
