--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -1,40 +1,143 @@
-/* Body */
-body {
+/* ==========================================================
+! 1. Body
+========================================================== */
+
+body{
 	background: url(../pictures/background.jpg);
+	background-color: #4566A8;
 	background-attachment: fixed;
 	background-repeat: repeat-x;
     background-position: center top;
 	background-size: cover;
    	position: relative !important;
-    padding: 10px;
+	margin-top: 30px;
+	margin-left: 30px;
+	margin-right: 40px;
+    margin-bottom: 80px;
 }
 
-@media (min-width: 240px) and (max-width: 768px) {
-	body {
-		background: url(../pictures/background.jpg);
-		align-content: center;
+/* col-sm-4*/
+.col-sm-4{
+	float:left;
+	width: 30%;
+	margin-top: 0px;
+	padding-top: 65px;
+	padding-left: 50px;
+}
+
+/* col-sm-5*/
+.col-sm-5{
+	float:right;
+	padding-top: 50px;
+}
+
+/* ancho .profiel pic col-sm-4 para pantalla de smartphone 	*/
+
+@media (max-width:400px){
+	.col-sm-4{
+		padding-top: 65px;
+		padding-right: 20px;
+	}
+}
+@media (max-width:880px){
+	.col-sm-4{
+		width: 100%;
+		padding-top: 20px;
+		
 	}
 }
 
-/* Menu Lateral */
-nav{
-	top: 0px;
-	margin: 0px;
-	position: fixed;
-	width: 300px;
-	height: 100%;
-	background-color: #2d2d2d;
-	display: block;
+@media (min-width:769px) and (max-width:1024px){
+	.col-sm-4{
+		width: 100%;
+		padding-top: 20px;
+	}
 }
 
-@media (min-width: 240px) and (max-width: 768px) {
-	nav {  
+@media (max-width:1024px){
+	.col-sm-5{
+		width: 100%;
+	}
+}
+
+@media (min-width:1024px){
+	.col-sm-5{
+		width: 65%;
+	}
+}
+
+@media (min-width:769px) and (max-width:1300px){
+	.col-sm-4{
+		width: 30%;
+	}
+}
+
+@media (max-width:564px){
+	.p{
+		text-align: center;
+	}
+}
+
+@media (min-width:565px){
+	.p{
+		text-align: justify;
+	}
+}
+
+/* col-sm-7 */
+.col-sm-7{
+	width: 80%;
+	float:right;
+}
+
+/* col-sm-9 */
+.col-sm-9{
+	width: 75%;
+	float:right;
+	margin-left:0px;
+	margin-right:0px;
+	padding-bottom: 25px;
+	background-color: #f9f9f9;
+}
+
+@media (max-width: 1024px){
+	.col-sm-9{
+		width: 100%;
+	}
+}
+
+/* col-sm-3*/
+.col-sm-3{
+	width: 23%;
+	height: 100%;
+	top: -20px;
+	left: 0px;
+	right: 0px;
+	float:left;
+	position: fixed;
+	display: block;
+
+}
+
+@media (max-width: 1024px){
+	.col-sm-3{
 		display: none;
-  	}
+		width: 0%;
+	}
+}
+
+/* ==========================================================
+! 2. Side Menu
+========================================================== */
+nav{
+	height: 100%;
+	background-color: #2d2d2d;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 
 ul.nav{
-	margin-top: 150px;
+	padding-top: 150px;
 	list-style: none;
 	display: block;
 }
@@ -48,11 +151,12 @@ ul.nav{
 
 .menu{
 	position: relative;
-	padding-right: 30px;
+	margin:10px;
+	padding-right: 20px;
 	float: right;
 	color: white;
 	opacity: .6;
-	font-size: 1.4em;
+	font-size: 1.2em;
 	-webkit-transition: opacity .2s;
 }
 
@@ -69,92 +173,114 @@ div.barra{
 }
 
 li:hover div.barra{
-	width: 300px;
+	width: 100%;
 }
 
 li:hover p.menu{
 	opacity: 1;
 }
 
-/* Propiedades del Contenido */
-.titulo-principal {
+/* ==========================================================
+! 3. Propiedades de contenido
+========================================================== */
+.titulo-principal{
 	color: #59A6C7;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid #59A6C7;
+	margin-top: 0px;
 	margin-bottom:0px;
+	padding-top: 50px;
     padding-bottom: 5px;
-	padding-top: 30px;
 	text-transform: uppercase;
 	font-size: 48px;
 	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
-	margin-top: 0px;
+	
 }
 
 .titulo-secundario{
-	color: /*#A72E30 */#2a5479;
-	border-bottom: 1px solid #ccc;
+	color: #2a5479;
+	border-bottom: 1px solid #2a5479;
+    margin-top: 0px;
 	margin-bottom: 10px;
-    padding-bottom: 5px;
-    font-weight: bold;
+	padding-top: 60px;
+	padding-bottom: 1px;
 	text-transform: uppercase;
 	font-size: 36px;
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
 }
 
 .subtitulo{
-	color: /*#A72E30*/ #3aa4d6;
+	color: #3aa4d6;
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 24px;
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
 	margin-top: 0px;
-	padding-top: 10px;
+	margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 10px;
 }
 
 p{
-	font-size: 20px;
-	/*color: #EDEBEB;*/
+	font-size: 16px;
 	color: #555555;
 	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+	text-align: justify;
+	margin-top: 0px;
+	margin-bottom: 20px;
 }
 
-@media (min-width:240px) and (max-width:768px){
+@media (max-width:768px){
 	.titulo-principal {
-		text-align: center;
-		border-bottom: 2px solid #59A6C7;
-		margin-bottom: 0px;
+		border-bottom: 3px solid #59A6C7;
+		margin-bottom: 1px;
 		padding-bottom: 5px;
-		padding-top: 0px;
-		text-transform: uppercase;
-		font-size: 48px;
-		margin-top: 0px;
+		text-align: center;		
+		margin-left: 0px;
+    	margin-right: 0px;
 	}
 	
-	.titulo-secundario, .subtitulo{
-		color: #2a5479;
-		text-align: center;
-		border-bottom: 1px solid #ccc;
-		margin-bottom: 10px;
-		padding-bottom: 5px;
-		font-weight: bold;
-		text-transform: uppercase;
-		font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	h1{
+		margin-right: 100px;
+    	margin-left: 260px;
+	}
+	
+	.titulo-secundario{
+		border-bottom: 3px solid #2a5479;
+		margin-bottom: 1px;
+		padding-bottom: 1px;
+		text-align: justify;
 	}
 
+	.subtitulo{
+		padding-top: 5px;
+    	padding-bottom: 10px;
+		margin-bottom: 0px;
+	}
+	
 	p{
-		font-size: 16px;
-		text-align: center;
-		margin-top:0px;
-		margin-left: 10px;
-		margin-right: 50px;
-		margin-bottom:0px;    
-    		padding-top: 10px;
-    		padding-bottom: 10px;
+		margin-bottom: 0px;
+		font-size: 14px;
 	}
 }
+
+@media(width:768px){
+	.col-sm-5{
+		width: 90%;
+		padding-top: 0px;
+	}
+}
+
+@media(width:768px){
+	.col-sm-7{
+		width: 85%;
+		float: right;
+	}
+}
+
 
 ul{
 	display: block;
-	-webkit-padding-start: 0px;
+    -webkit-padding-start: 0px;
 }
 
 li{
@@ -165,23 +291,30 @@ li{
 }
 
 /* ==========================================================
-! . Perfil
+! 4. Profile Pic
 ========================================================== */
-.profile-pic {
-  	text-align: center;
+.margen-superior{
+	margin-top:60px;
+}
+
+.profile-pic{
   	border-radius: 100%;
   	-moz-border-radius: 100%;
   	-webkit-border-radius: 100%;
-  	width: 250px;
-  	height: 250px;
+  	width: 220px;
+  	height: 220px;
   	border: 5px solid #249991;
   	overflow: hidden;
-  	margin: 21px auto;
+	margin-top: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
 }
-.profile-pic img {
-  	width: 210px;
-  	height: 210px;
-  	margin-top: 20px;
+
+.profile-pic img{
+  	width: 200px;
+  	height: 200px;
+  	margin-top: 10px;
   	border-radius: 100%;
   	-moz-border-radius: 100%;
   	-webkit-border-radius: 100%;
@@ -191,48 +324,52 @@ li{
 	transition: all 0.3s ease-in-out;
 }
 
-/* Section Perfil */
-section{
-	background-color: #F9F9F9;
-	/*padding: 30px;*/
+@media (min-width: 240px) and (max-width: 768px){
+	.profile-pic {
+		width: 200px;
+  		height: 200px;
+		overflow: hidden;
+	}
+	
+	.profile-pic img {
+		margin-top:6px;
+		width: 188px;
+  		height: 188px;
+	}
 }
 
-/* foto de perfil */
+/*@media (min-width: 1024px){
+	.profile-pic {
+		margin-left: -5px;
+		margin-right: 50px;
+	}
+}*/
 
-/* Section Seccion */
-.seccion{
-	padding:30px;
-	padding-left:120px;
-	padding-right:100px;
+/* ==========================================================
+! 5. Section
+========================================================== */
+/*section{
+	background-color: 
+}*/
+
+/* ==========================================================
+! 6. Article
+========================================================== */
+article{
+	margin-top: 0px;
+	margin-right: 100px;
+	
+}
+/* ==========================================================
+! 6. Article
+========================================================== */
+article.profile{
+	margin-left: 50px;
 }
 
-
-/* Section Perfil */
-.perfil{
-	margin-top:0px;
-	margin-bottom:0px;
-	border-top-width:1px;
-	padding-top:90px;
-	padding-left:330px;
-	padding-right:0px;
-	border-right-width:50-;
-}
-
-/* Section Informacion Personal */
-.informacion-personal{
-
-}
-
-/* Section Educacion */
-.educacion{
-
-}
-
-/* Section Experiencia Laboral */
-.experiencia-laboral{
-	font-size: 14px;
-}
-
+/* ==========================================================
+! 6.3 Article Education
+========================================================== */
 .list-style{
 	list-style-position: inside;
 	list-style: circle;
@@ -246,15 +383,12 @@ section{
     font-weight: 200;
 }
 
-/* Section Habilidades */
+/* ==========================================================
+! 6.5 Article Skills
+========================================================== */
 .skills-list {
     list-style: none;
 }
-
-/*ul {
-    margin: 0;
-    padding: 0;
-}*/
 
 .progress {
     position: relative;
@@ -284,40 +418,112 @@ section{
     font-size: 14px;
 }
 
-
-
-/* Section Intereses */
-.intereses{
-
+.progress{
+	overflow:hidden;
+	height:20px;
+	margin-bottom:20px;
+	background-color:#f5f5f5;
+	border-radius:4px;
+	-webkit-box-shadow:
+	inset 0 1px 2px rgba(0,0,0,.1);
+	box-shadow:inset 0 1px 2px rgba(0,0,0,.1);
 }
 
-/* Section Portafolio */
-.portafolio{
 
+.progress-bar{
+	float:left;
+	width:0;
+	height:100%;
+	font-size:12px;
+	line-height:20px;
+	color:#fff;
+	text-align:center;
+	background-color:#428bca;
+	-webkit-box-shadow:
+	inset 0 -1px 0 rgba(0,0,0,.15);
+	box-shadow:inset 0 -1px 0 rgba(0,0,0,.15);
+	-webkit-transition:width .6s ease;transition:width .6s ease;
 }
 
-/* Footer */
-.pie-de-pagina{
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+
+/* ==========================================================
+! 8. Footer
+========================================================== */
+footer{
 	background-color: #8F2C2E;
-	padding: 1px;
-	/*padding-left: 20px;
-	padding-bottom: 20px;*/
-	text-align: center;
-	margin-bottom: 60px;
+	padding: 10px;
+	margin-left:0px;
+	margin-bottom: 80px;
 }
 
 p.quote {
   color: #fff;
-  /*font-size: 20px;
-  font-weight: 200;
-  margin: 15px;*/
   padding-top: 20px;
+  font-size: 20px;
+  text-align: center;
 }
 
-p.autor {
+p.author {
   color: #fff;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
-  /*padding-top: 15px;
-  padding-bottom: 15px;*/
+  text-align: center;
+}
+
+/* ==========================================================
+! 9. Responsive
+========================================================== */
+@media(min-width:320px) and (max-width:425px){
+	.margen-superior{
+		margin-top: 40px;
+	}
+	.col-sm-4{
+		float: left;
+		padding-top: 0px;
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+	
+}
+@media(width:320px){
+	.col-sm-4{
+		width: 250px;
+	}
+}
+@media(width:375px){
+	.col-sm-4{
+		width: 305px;
+	}
+}
+@media(width:425px){
+	.col-sm-4{
+		width: 355px;
+	}
+}
+@media(min-width:320px) and (max-width:768px){
+	footer{
+		padding-bottom: 40px;
+	}
+	
+	p.quote {
+	  	font-size: 16px;
+		padding-top: 30px;
+		padding-bottom: 10px;
+	}
+	
+	p.author {
+	  	font-size: 12px;
+	}
+	
 }
