--- a/style.css
+++ b/style.css
@@ -100,20 +100,24 @@ footer p {
 
 @media (min-width:320px) and (max-width:1024px) {
   .container {
-  	width: 741px;
-	  margin-left: 0;
-	  margin-right: 0;
-	  padding-left: 0;
-	  padding-right: 0;
+    width: 741px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  header, section, footer {
+    margin: 0 0 0 0;
+    width: 100%;
   }
   nav {
-   	width: 741px;
-  	margin: 0 0;
+    width: 741px;
+    margin: 0 0;
   }
   nav ul {
-	  width: 741px;
-	  margin-left: 0;
-	  margin-right: 0;
+    width: 741px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
