--- a/style.css
+++ b/style.css
@@ -60,8 +60,7 @@ nav ul li:hover {
 }
 
 section {
-	/*background-color: #f9f9f9;*/
-	background-color: white;
+  background-color: white;
 }
 
 section, footer {
@@ -118,6 +117,11 @@ footer p {
     width: 741px;
     margin-left: 0;
     margin-right: 0;
+  }
+  section, footer {
+    -webkit-box-shadow: 0 0 0 0;
+    -moz-box-shadow: 0 0 0 0;
+    box-shadow: 0 0 0 0;
   }
 }
 
