--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ html, body {
 }
 
 body {
+  /*background: url(img/background-13.jpg) repeat-x center center;
+  background-attachment: fixed;
+  background-size: cover;*/
   background-color: #fff;
   font-family: 'Roboto', sans-serif;
   font-weight: 300; 
@@ -60,14 +63,15 @@ nav ul li:hover {
 }
 
 section {
-  background-color: white;
+	/*background-color: #f9f9f9;*/
+	background-color: white;
 }
 
-section, footer {
+/*section, footer {
   -webkit-box-shadow: 1px 2px 0px 2px rgba(42,84,121,1);
   -moz-box-shadow: 1px 2px 0px 2px rgba(42,84,121,1);
   box-shadow: 1px 2px 0px 2px rgba(42,84,121,1);
-}
+}*/
 
 header, section, footer {
   padding: 1px 0 1px 0;	
@@ -98,30 +102,27 @@ footer p {
 }
 
 @media (min-width:320px) and (max-width:1024px) {
-  .container {
-    width: 741px;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
-  }
   header, section, footer {
     margin: 0 0 0 0;
     width: 100%;
   }
+  
   nav {
-    width: 741px;
-    margin: 0 0;
+   	width: 100%;
+  	margin: 0 0;
   }
   nav ul {
-    width: 741px;
+	  width: 741px;
+	  margin-left: 0;
+	  margin-right: 0;
+  }
+  .container {
     margin-left: 0;
     margin-right: 0;
-  }
-  section, footer {
-    -webkit-box-shadow: 0 0 0 0;
-    -moz-box-shadow: 0 0 0 0;
-    box-shadow: 0 0 0 0;
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 850px;
+    height: 100%;
   }
 }
 
@@ -134,6 +135,14 @@ footer p {
 .profile img {
   float: left;
   margin: 0 80px 50px 0;
+
+}
+@media (min-width:320px) and (max-width:768px) {
+  .profile img {
+    position: relative;
+    float: none;
+    margin: 0 auto;
+  }
 }
 
 .profile p {
