--- a/style.css
+++ b/style.css
@@ -4,9 +4,6 @@ html, body {
 }
 
 body {
-  /*background: url(img/background-13.jpg) repeat-x center center;
-  background-attachment: fixed;
-  background-size: cover;*/
   background-color: #fff;
   font-family: 'Roboto', sans-serif;
   font-weight: 300; 
@@ -63,15 +60,8 @@ nav ul li:hover {
 }
 
 section {
-	/*background-color: #f9f9f9;*/
-	background-color: white;
+  background-color: white;
 }
-
-/*section, footer {
-  -webkit-box-shadow: 1px 2px 0px 2px rgba(42,84,121,1);
-  -moz-box-shadow: 1px 2px 0px 2px rgba(42,84,121,1);
-  box-shadow: 1px 2px 0px 2px rgba(42,84,121,1);
-}*/
 
 header, section, footer {
   padding: 1px 0 1px 0;	
@@ -108,13 +98,13 @@ footer p {
   }
   
   nav {
-   	width: 100%;
-  	margin: 0 0;
+    width: 100%;
+    margin: 0 0;
   }
   nav ul {
-	  width: 741px;
-	  margin-left: 0;
-	  margin-right: 0;
+    width: 741px;
+    margin-left: 0;
+    margin-right: 0;
   }
   .container {
     margin-left: 0;
@@ -131,12 +121,13 @@ footer p {
   top: 50px;
   margin: 80px auto;
 }
-
+/*
 .profile img {
   float: left;
   margin: 0 80px 50px 0;
 
 }
+*/
 @media (min-width:320px) and (max-width:768px) {
   .profile img {
     position: relative;
