--- a/style.css
+++ b/style.css
@@ -107,19 +107,23 @@ footer p {
     margin-right: 0;
   }
   .container {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
+    margin: 0 70px;
+    padding: 50px 0;
     max-width: 850px;
-    height: 100%;
+    heigth: 100px;
   }
 }
 
 .profile .container {
   position: relative;
-  top: 50px;
-  margin: 80px auto;
+  top: 60px;
+  padding-left: 70px;
+  padding-right: 70px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  bottom: 0px;
 }
 
 .profile p {
