--- a/style.css
+++ b/style.css
@@ -108,9 +108,8 @@ footer p {
   }
   .container {
     margin: 0 70px;
-    padding: 50px 0;
+    padding: 0 50px;
     max-width: 850px;
-    heigth: 100px;
   }
 }
 
